manifests/secondarydns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: secondary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: secondary-dns
  name: secondary-dns
  namespace: secondary
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: secondary-dns
  template:
    metadata:
      labels:
        k8s-app: secondary-dns
      annotations:
        kubectl.kubernetes.io/default-container: status-monitor
    spec:
      serviceAccountName: secondary
      securityContext:
        runAsUser: 107
        runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      containers:
      - args:
        - -conf
        - /etc/coredns/Corefile
        image: registry.k8s.io/coredns/coredns:v1.10.1
        imagePullPolicy: IfNotPresent
        name: secondary-dns
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
        ports:
        - containerPort: 5353
          name: dns
          protocol: UDP
        - containerPort: 8082
          name: healthport
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 70Mi
        volumeMounts:
        - name: config-volume
          mountPath: /etc/coredns
          readOnly: true
        - name: secdns-zones
          mountPath: /zones
          readOnly: true
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          httpGet:
            path: /ready
            port: healthport
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: healthport
          initialDelaySeconds: 15
          periodSeconds: 20
      - name: status-monitor
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
        image: registry:5000/kubevirt/kubesecondarydns:latest
        resources:
          requests:
            cpu: 100m
            memory: 70Mi
        ports:
        - containerPort: 8081
          name: healthport
          protocol: TCP
        volumeMounts:
        - name: secdns-zones
          mountPath: /zones
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthport
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthport
          initialDelaySeconds: 15
          periodSeconds: 20
        terminationMessagePolicy: FallbackToLogsOnError
      priorityClassName: system-cluster-critical
      restartPolicy: Always
      terminationGracePeriodSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          defaultMode: 420
          items:
          - key: Corefile
            path: Corefile
          name: secondary-dns
      - name: secdns-zones
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ksd-allow-egress-to-dns
  namespace: secondary
spec:
  podSelector:
    matchLabels:
      k8s-app: secondary-dns
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: TCP
      port: dns-tcp
    - protocol: UDP
      port: dns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ksd-allow-egress-to-api-server
  namespace: secondary
spec:
  podSelector:
    matchLabels:
      k8s-app: secondary-dns
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-secondary-dns
  namespace: secondary
spec:
  podSelector:
    matchLabels:
      k8s-app: secondary-dns
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: UDP
      port: 5353
